--- a/src/sass/blocks/_pagination.scss
+++ b/src/sass/blocks/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 50px auto 0 auto;
   width: 590px;
   height: 40px;
   &__arrow {
