--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -405,7 +405,7 @@ header {
 .pagination {
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 50px auto 0 auto;
   width: 590px;
   height: 40px;
 }
