--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -4,12 +4,14 @@
   <meta charset="utf-8">
   <title>Card component</title>
   <link rel="stylesheet" href="../01-css-task/style.css">
+  <link rel="stylesheet" href="../../pagination/01-css-task/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
   <style>
-    .wrapper {
+    /* .wrapper {
       width: 400px;
       margin: 100px auto;
-    }
+    } */
   </style>
 </head>
 
@@ -17,7 +19,8 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    // import Card from './index.js';
+    import Card from './index.js';
+    import Pagination from './pagination.js';
 
     const product = {
       "id": "76w0hz7015kkr9kjkav",
@@ -32,19 +35,7 @@
       "brand": "acer"
     };
 
-    // const card = new Card(product);
-
-    // root.append(card.element);
-
-////////////
-
-const title = "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black";
-// class Component {
-//   constructor (someTitle) {
-//     console.error ('Hellow From const');
-//   }
-// }
-const monitor = {
+    const monitor = {
       id: "w73oaydowenkr9kjkav",
       images: [
       "https://content1.rozetka.com.ua/goods/images/big_tile/178050370.jpg"
@@ -56,63 +47,34 @@ const monitor = {
       brand: "benq"
     };
 
-class Component {
-      constructor (someProduct) {
-        this.state = someProduct;
-        this.render();
-      }
+    const card = new Card(product);
+    const pagination = new Pagination ({
+      activePageIndex: 3
+    });
+    const someElement = document.querySelector('#root');
 
-      getTeamplate () {
-        return   `
-        <div class="wrapper">
-    <div class="os-product-card">
-      <div class="os-product-img">
-          <img class="img scale-down" src="${this.state.images[0]}" alt="">
-      </div>
-      <div class="os-product-discription">
-        <div class="os-rating-price-bar">
-          <div class="os-rating">
-            <span>${this.state.rating}</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
-              <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-            </svg>
-          </div>
-          <div class="os-price">${this.state.price}
-          </div>
-        </div>
-          <div class="os-product-name">
-            ${this.state.title}
-          </div>
-          <div class="os-product-category">
-            ${this.state.category}
-          </div>
-      </div>
-      <div class="os-add-button">
-        <p>Add to cart</p>
-      </div>
-    </div>
-  </div>
-          `;
+    someElement.append(card.ComponentElement);
+    someElement.append(pagination.element);
+    pagination.setPage (9);
+    pagination.prevPage ();
+    pagination.nextPage ();
 
 
-      }
+////////////
 
-      update (data={}) {
-      this.state=data;
-      this.ComponentElement.innerHTML=this.getTeamplate();
-    };
-      render () {
-          const element = document.createElement ('div');
-          element.innerHTML = this.getTeamplate ();
+// const title = "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black";
+// class Component {
+//   constructor (someTitle) {
+//     console.error ('Hellow From const');
+//   }
+// }
 
-          this.ComponentElement = element;
-        }
-    }
 
-    const obj = new Component(product);
-    const myRootElement = document.querySelector('#root');
-    myRootElement.append(obj.ComponentElement)
-obj.update(monitor);
+
+//     const obj = new Component(product);
+//     const myRootElement = document.querySelector('#root');
+//     myRootElement.append(obj.ComponentElement)
+// obj.update(monitor);
 
 
 
