--- a/online-store/src/src/components/card/01-css-task/index.html
+++ b/online-store/src/src/components/card/01-css-task/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="content">
       <div class="img">
-        <img src="Rectangle.png" alt="photo">
+        <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="photo">
       </div>
       <div class="actions">
         <button class="star" type="button">1.23 <svg width="14" height="12" viewBox="0 0 14 12" fill="none"
