--- a/online-store/src/src/components/card/01-css-task/style.css
+++ b/online-store/src/src/components/card/01-css-task/style.css
@@ -16,7 +16,7 @@ body {
   flex-direction: column;
   justify-content: center;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
-  border-radius: 3px;
+  border-radius: 10px;
 }
 
 .content {
@@ -52,6 +52,8 @@ button {
   border: none;
   color: white;
   cursor: pointer;
+  border-radius: 0px 0px 10px 10px;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.133);
 }
 
 .star {
