added component page, pagination, card-list, card

--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -2,7 +2,11 @@
     width:61.875rem;
     margin: 0 auto;
 }
-.card-list{
-    width:100%;
-    margin-top: 20px;
-}
+.products-list{
+    
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
+  
+  }
+  
