--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -3,7 +3,7 @@
   --purpure-100:#7E72F2;
 }
 .wrapper {
-  width: 400px;
+  width: 100%;
   margin: 100px auto;
 }
 .font-size-13{
@@ -16,6 +16,8 @@
   font-size: 0.9375rem;
 }
 .prodact-card{
+  margin: 0 auto;
+  max-width:400px;
   height: 394px;
   border-radius: 8px;
   box-shadow: 0px 2px 8px var(--transparent-100);
@@ -71,4 +73,11 @@
   background: transparent;
   border:none;
   width:80%;
+}
+.products-list{
+    
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 20px;
+
 }
