--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -5,13 +5,11 @@
   <title>Card component</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../../pagination/01-css-task/style.css">
   <link rel="stylesheet" href="../01-css-task/style.css">
 
   <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
+    
   </style>
 </head>
 
@@ -19,24 +17,14 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from "./index.js";
+    import {products} from './products.js';
+    import OnlineStorePage from "./index.js";
+ 
 
-    const product = {
-      "id": "76w0hz7015kkr9kjkav",
-      "images": [
-        "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
-      ],
-      "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      "rating": 2.89,
-      "price": 15999,
-      "category": "laptops",
-      "brand": "acer"
-    };
-   
-    const card = new Card (product);
+    const page = new OnlineStorePage(products);
     const root = document.querySelector('#root');
-    root.append(card.componentElement);
+    
+    root.append(page.element);
 
   </script>
 </body>
