--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -6,11 +6,15 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 .wrapper {
-  width: 400px;
-  margin: auto;
-  padding: 0px 15px;
-  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  /* width: 400px; */
+  /* margin: 0 auto; */
+  /* padding: 0px 15px; */
+  /* box-sizing: border-box; */
 }
+
+
 :root {
   --bg-main: #ffffff;
   --main-color: #7e72f2;
@@ -19,11 +23,27 @@ body {
   --text-main-color: #2c2c2c;
   --text-active-color: #ffffff;
 }
+
+.os-card-grid {
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  vertical-align: middle;
+  text-align: center;
+  flex-wrap: wrap; */
+  margin: 0 0;
+  /* outline: 1px solid black; */
+  background: lightblue;
+}
+
+
 .os-product-card {
-  /* max-height: 27rem; */
-  max-width: 100%;
-  min-height: 100%;
-  /* min-width: 400px; */
+  max-height: 27rem;
+  /* max-width: 100%; */
+  /* min-height: 100%; */
+  min-width: 400px;
   box-sizing: border-box;
   background-color: var(--bg-main);
   border-radius: 0.5rem;
