--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -19,16 +19,15 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import {products} from './products.js';
+    import { products } from './products.js';
     import OnlineStorePage from './index.js';
-    // import CardList from './cards-list.js';
 
 
 
 
 
 
-    const page = new OnlineStorePage();
+    const page = new OnlineStorePage(products);
     const someElement = document.querySelector('#root');
 
 
