--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -4,53 +4,53 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.pagination.css">
 
 </head>
 <body>
 
 <main>
-  <div class="wrapper">
+  <div class="wrapper-pagination">
     <nav class="pagination">
       <a href="#" class="arrow-left" data-element="nav-prev">
         <i class="bi bi-chevron-left"></i>
       </a>
-    <ul class="page-list">
-      <li>
-        <a href="#" data-element="page-number" class="page-number active">1</a>
+    <ul class="page-list" data-element="pagination-list">
+      <li class="page-number active">
+        <a href="#" data-element="page-link" class="page-link">1</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">2</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">2</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">3</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">3</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">4</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">4</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">5</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">5</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">6</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">6</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">7</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">7</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">8</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">8</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">9</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">9</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">10</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">10</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">11</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">11</a>
       </li>
-      <li>
-        <a href="#" data-element="page-number" class="page-number">12</a>
+      <li class="page-number">
+        <a href="#" data-element="page-link" class="page-link">12</a>
       </li>
     </ul>
     <a href="#" class="arrow-right" data-element="nav-next">
