--- a/src/components/card/01-css-task/style.card.css
+++ b/src/components/card/01-css-task/style.card.css
@@ -1,4 +1,4 @@
-.product {
+.wrapper-card{
   width: 317px;
   margin: 100px auto;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
@@ -10,11 +10,6 @@
   text-align: center;
   width: 293px;
   height: 200px;
-<<<<<<< HEAD
-  background-image: url(../card/laptop.svg);
-  background: 100%;
-=======
->>>>>>> 04452c09fe520a874172b6d315dc547785a723d7
   margin: 12px;
 }
 .rating{
