--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -1,52 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Card component</title>
-  <link rel="stylesheet" href="../../../styles/style.min.css">
+    <meta charset="UTF-8">
+    <title>Card component</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 600px;
-      margin: 100px auto;
-    }
 
-    .os-product-card {
-      margin-bottom: 20px;
-    }
-  </style>
 </head>
 
 <body>
+ <div id="root" class="wrapper"></div>
 
-  <div id="root" class="wrapper"></div>
+ <script type="module">
+  import { products } from './products.js';
+  import OnlineStorePage from './index.js';
 
-  <script type="module">
-    import Card from './index.js';
-    import Pagination from './pagination.js';
+  const page = new OnlineStorePage(products);
+  const root = document.querySelector('#root');
 
-    const product = {
-      "id": "76w0hz7015kkr9kjkav",
-      "images": [
-        "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
-      ],
-      "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      "rating": 2.89,
-      "price": 15999,
-      "category": "laptops",
-      "brand": "acer"
-    };
+  root.append(page.element);
 
-    const card = new Card(product);
-    const pagination = new Pagination({
-      activePageIndex: 3
-    });
-
-    const someElement = document.querySelector('#root');
-
-    someElement.append(card.componentElement);
-    someElement.append(pagination.element);
-  </script>
+</script>
 </body>
 </html>
